working on discussion section

--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -14,7 +14,7 @@ The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S.\ energy ge
  
 \begin{figure}[htp]
 \centering
-\includegraphics[width=\textwidth]{Figure-EIA_projections}
+\includegraphics[width=\textwidth]{templates/images/Figure-EIA_projections.png}
 \caption[U.S.\ EIA projections based on the AEO2021 reference case]{U.S.\ EIA projections of (Left) U.S.\ electricity generation by fuel source and (Right) individual contributions by renewables based on the AEO2021 reference case \protect\citep{eia_annual_2021}. Vertical dashed line marks where historical records end and projections begin.}
 \label{fig:eia_2021_projections}
 \end{figure}
