--- a/templates/chap6.tex
+++ b/templates/chap6.tex
@@ -62,6 +62,7 @@ NPV & \$1.0 \\ \hline
 \end{table}
 
 \section{Probabilistic Model Metrics}
+\label{ch6:cost_model_metrics}
 
 Monte Carlo simulation is applied to all of the probabilistic models to estimate the range of model behavior. For each model, results represent 2000 simulated runs where each realization defines a unique combination of variable values sampled from the PDFs reviewed in Section \ref{ch4:pdfs}. 
 
