--- a/templates/main.tex
+++ b/templates/main.tex
@@ -19,7 +19,7 @@
 %%  If you want your thesis copyright to you instead of MIT, use the
 %%  ``vi'' option, as above.
 %%
-\documentclass[%draft,
+\documentclass[draft,
 12pt,vi,twoside,leftblank]{mitthesis}
 %%
 %% If you want blank pages before new chapters to be labelled ``This
@@ -75,6 +75,18 @@
 \usepackage{enumitem}
 \usepackage{xparse}
 \ExplSyntaxOn
+
+%% tables with wrapping
+\usepackage{array}
+\usepackage{ragged2e}
+
+    \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+    \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+
+%\newcolumntype{P}[1]{>{\RaggedRight\hspace{0pt}}p{#1}}
+%\newcolumntype{C}[1]{>{\centering\arraybackslash\hspace{0pt}}p{#1}}
+
+
 
 %% support multiple citations with page numbers
 \makeatletter
